--- a/server/package.json
+++ b/server/package.json
@@ -7,13 +7,18 @@
     "dev": "tsx watch src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "prisma:push": "prisma db push",
+    "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:coverage": "vitest --coverage",
+    "prisma:push": "prisma db push --schema ../prisma/schema.prisma",
+    "prisma:generate": "prisma generate --schema ../prisma/schema.prisma",
     "seed": "tsx src/scripts/seed.ts"
   },
   "dependencies": {
-    "@shopify/shopify-api": "^11.4.0",
-    "@shopify/admin-api-client": "^1.0.0",
     "@prisma/client": "^5.18.0",
+    "@shopify/admin-api-client": "^1.0.0",
+    "@shopify/shopify-api": "^11.4.0",
+    "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
     "csv-parse": "^5.5.6",
     "csv-stringify": "^6.5.0",
@@ -22,8 +27,12 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.10",
+    "@vitest/coverage-v8": "^1.6.1",
     "prisma": "^5.18.0",
     "tsx": "^4.16.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.5.4",
+    "vitest": "^1.6.1"
   }
 }
