--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -6,8 +6,13 @@
     "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "allowImportingTsExtensions": false,
+    "noEmit": false
   },
   "include": [
     "src"
