--- a/web/package.json
+++ b/web/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start -p 3001"
+    "start": "next start -p 3001",
+    "type-check": "npx tsc --noEmit --project tsconfig.json"
   },
   "dependencies": {
+    "@shopify/app-bridge-react": "^4.2.1",
+    "@shopify/polaris": "^12.8.0",
+    "@tanstack/react-table": "^8.20.5",
+    "@types/node": "^24.2.1",
+    "@types/react": "^19.1.10",
+    "isomorphic-fetch": "^3.0.0",
     "next": "14.2.5",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@tanstack/react-table": "^8.20.5",
-    "papaparse": "^5.4.1",
-    "isomorphic-fetch": "^3.0.0"
+    "typescript": "^5.9.2"
   }
 }
